[package]
name = "socks5ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.0.2", features = ["derive"] }
ctrlc = "3.2.3"
fast-socks5 = "0.8.1"
flexi_logger = { version = "0.23.3", features = ["specfile_without_notification", "async"] }
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
tokio = { version = "1.24.2", features = ["io-std", "net", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
toml = "0.5.9"
windows-service = "0.5.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
