[package]
name = "socks5ws"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
clap = { version = "4.5.42", features = ["derive"] }
ctrlc = "3.4.7"
fast-socks5 = "=1.0.0-rc.0"
flexi_logger = { version = "0.31.2", features = ["specfile_without_notification", "async"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
tokio = { version = "1.47.0", features = ["io-std", "net", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["net"]}
tokio-util = "0.7.15"
toml = "0.9.4"
windows-service = "0.8.0"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = true
